# GameNetworkingSockets

./: .editorconfig  .gitignore  .gitmodules  .travis-run-local.py  .travis.yml  BUILDING.md  BUILDING_ANDROID.md  BUILDING_IOS.md  BUILDING_WINDOWS_MANUAL.md  CMakeLists.txt  GameNetworkingSockets.code-workspace  LICENSE  README.md  README_P2P.md  README_PARTNER.md  SECURITY.md  meson.build  meson_options.txt  vcpkg.json
.github/: action.sh  build-cmake.sh  build.sh  install-ubuntu.sh  install.sh  preinstall.sh  run-single-config.py  update-packages.sh
.travis/: build-cmake.sh  build-meson.sh  build.sh  install-alpine.sh  install-archlinux.sh  install-debian.sh  (+7 more)
examples/: CMakeLists.txt  example_chat.cpp  example_chat.vpc  meson.build  trivial_signaling_client.cpp  trivial_signaling_client.h  trivial_signaling_server.go  trivial_signaling_server.py
examples/vcpkg_example_chat/: CMakeLists.txt  README.md  vcpkg.json
gateway/: CMakeLists.txt  gateway.cpp  meson.build
src/: .gitattributes  CMakeLists.txt  GameNetworkingSockets.sln  devtools  gnsconfig.h.in.cmake  lib  meson.build  vpc_scripts
src/common/: Valve.common.targets  crypto.cpp  crypto.h  crypto_25519.cpp  crypto_25519.h  crypto_25519_donna.cpp  crypto_25519_libsodium.cpp  crypto_25519_openssl.cpp  crypto_bcrypt.cpp  crypto_constants.h  crypto_digest_opensslevp.cpp  crypto_libsodium.cpp  crypto_openssl.cpp  crypto_sha1_wpa.cpp  crypto_symmetric_opensslevp.cpp  crypto_textencode.cpp  keypair.cpp  keypair.h  openssl_stack_allocator.cpp  openssl_stack_allocator.h  opensslwrapper.cpp  opensslwrapper.h  percentile_generator.h  stdafx.h  steam  steamdatagram_messages_auth.proto  steamdatagram_messages_sdr.proto  steamid.cpp  steamid.h  steammessages_gamenetworkingui.proto  steamnetworkingsockets_messages.proto  steamnetworkingsockets_messages.vpc  steamnetworkingsockets_messages_certs.proto  steamnetworkingsockets_messages_udp.proto  urlhelper_webapihost.cpp
src/public/: generated_code_wrapper_begin.h  generated_code_wrapper_end.h  steamrealm.h  winlite.h
src/public/minbase/: min_crypto_impl.h  minbase_annotations.h  minbase_common_errors.cpp  minbase_common_errors.h  minbase_decls.h  minbase_endian.h  minbase_identify.h  minbase_limits.h  minbase_macros.h  minbase_securezeromemory_impl.h  minbase_types.h  minbase_warnings.h
src/public/steam/: isteamchat.h  isteamclient.h  isteamgamestats.h  isteaminput.h  isteamtv.h  isteamuser.h  steamclientpublic.h  steamtypes.h
src/public/steamnetworkingsockets/: isteamnetworkingsockets.h  steamnetworkingtypes.h
src/public/tier0/: basetypes.h  dbg.h  dbgflag.h  memdbg_restore.h  memdbg_save_off.h  memdbg_save_on.h  memdbgoff.h  memdbgon.h  platform.h  platform_sockets.h  platform_sockets_playstation.h  platformtime.h  t0constants.h  validator.h  valve_tracelogging.h  vprof.h  wchartypes.h
src/public/tier1/: bitstring.h  convar.h  fmtstr.h  generichash.h  netadr.h  utlbuffer.h  utlhashmap.h  utliterator.h  utllinkedlist.h  utlmap.h  utlmemory.h  utlpriorityqueue.h  utlrbtree.h  utlstring.h  utlvector.h
src/public/vstdlib/: random.h  strtools.h
src/steamnetworkingsockets/: percentile_generator.h  sdr  steamnetworking_stats.h  steamnetworking_statsutils.h  steamnetworkingsockets_branch_config.vpc  steamnetworkingsockets_certs.cpp  steamnetworkingsockets_certstore.cpp  steamnetworkingsockets_certstore.h  steamnetworkingsockets_crypt_include.vpc  steamnetworkingsockets_internal.h  steamnetworkingsockets_linkbaselibs_include.vpc  steamnetworkingsockets_messages_win64.vcxproj  steamnetworkingsockets_platform.h  steamnetworkingsockets_shared.cpp  steamnetworkingsockets_stats.cpp  steamnetworkingsockets_thinker.cpp  steamnetworkingsockets_thinker.h  ticketgen
src/steamnetworkingsockets/certtool/: steamnetworkingsockets_certtool.cpp  steamnetworkingsockets_certtool.vpc  steamnetworkingsockets_certtool_win64.vcxproj
src/steamnetworkingsockets/clientlib/: SNP_WIRE_FORMAT.md  csteamnetworkingmessages.cpp  csteamnetworkingmessages.h  csteamnetworkingsockets.cpp  csteamnetworkingsockets.h  ice_client_types.h  iclientnetworkingmessages.h  iclientnetworkingsockets.h  iclientnetworkingutils.h  nswitch  ps5  sdr  steam  steamnetworkingconfig.h  steamnetworkingsockets.vpc  steamnetworkingsockets_connections.cpp  steamnetworkingsockets_connections.h  steamnetworkingsockets_files.vpc  steamnetworkingsockets_flat.cpp  steamnetworkingsockets_ice_client.cpp  steamnetworkingsockets_ice_client.h  steamnetworkingsockets_lowlevel.cpp  steamnetworkingsockets_lowlevel.h  steamnetworkingsockets_lowlevel_misc.cpp  steamnetworkingsockets_mock.h  steamnetworkingsockets_p2p.cpp  steamnetworkingsockets_p2p.h  steamnetworkingsockets_p2p_ice.cpp  steamnetworkingsockets_p2p_ice.h  steamnetworkingsockets_p2p_webrtc.cpp  steamnetworkingsockets_p2p_webrtc.h  steamnetworkingsockets_platform.h  steamnetworkingsockets_snp.cpp  steamnetworkingsockets_snp.h  steamnetworkingsockets_snp_debug.cpp  steamnetworkingsockets_snp_debug.h  steamnetworkingsockets_socketthread.cpp  steamnetworkingsockets_spew.cpp  steamnetworkingsockets_stun.cpp  steamnetworkingsockets_stun.h  (+5 more)
src/steamnetworkingsockets/clientlib/etw/: etw_compile.bat  steamnetworkingsockets_etw.cpp  steamnetworkingsockets_etw_events.h  steamnetworkingsockets_etw_events.man  steamnetworkingsockets_etw_events.rc
src/tier0/: cpu.cpp  dbg.cpp  platformtime.cpp  platformtime_nswitch.h  valve_tracelogging.cpp
src/tier1/: bitstring.cpp  generichash.cpp  ipv6text.c  ipv6text.h  netadr.cpp  utlbuffer.cpp  utlmemory.cpp  utlstring.cpp
src/vstdlib/: strtools.cpp
tests/: CMakeLists.txt  connection_test.cpp  make_test_certs.py  meson.build  stun_server.py  test_common.cpp  test_common.h  test_connection.cpp  test_connection.vpc  test_crypto.cpp  test_crypto.vpc  test_flat.c  test_p2p.cpp  test_p2p.py  test_p2p.vpc  test_p2p_stress.cpp  test_p2p_stress.vpc  test_pki.cpp  test_pki.vpc  tsan.supp
tests/aesgcmtestvectors/: gcmDecrypt128.rsp  gcmDecrypt192.rsp  gcmDecrypt256.rsp  gcmEncryptExtIV128.rsp  gcmEncryptExtIV192.rsp  gcmEncryptExtIV256.rsp  readme.txt
(+49 files in other folders)
