option('light_tests',
  type: 'boolean',
  value: true,
  description: 'Use smaller/shorter tests for simple integration testing (e.g. Travis)')

option('Werror',
  type: 'boolean',
  value: false,
  description: 'Enable -Werror flag when compiling')

option('use_crypto',
  type: 'combo',
  value: 'OpenSSL',
  description: 'Crypto library to use for AES/SHA256',
  choices: ['OpenSSL', 'libsodium', 'BCrypt'])

option('use_crypto25519',
  type: 'combo',
  value: 'OpenSSL',
  description: 'Crypto library to use for ed25519/curve25519',
  choices: ['OpenSSL', 'libsodium', 'Reference'])
